# t5-distill

./: .gitignore  README.md  flux_inference.py  main.py  pyproject.toml  train.sh
t5_distill/: adapter.py  config.py  dataloader.py  train_utils.py  trainer.py
